--- a/src/app/pages/offer-form/offer-form.component.scss
+++ b/src/app/pages/offer-form/offer-form.component.scss
@@ -15,7 +15,7 @@ $main-theme-color: #2E7990;
     line-height: 45px;
     cursor: pointer;
 
-    &:not(:last-child){
+    &:not(:last-child) {
       margin-bottom: 2em;
     }
   }
@@ -38,7 +38,7 @@ $main-theme-color: #2E7990;
       height: 35px;
       line-height: 35px;
 
-      &:not(:last-child){
+      &:not(:last-child) {
         margin-bottom: 1em;
       }
     }
@@ -70,28 +70,67 @@ $main-theme-color: #2E7990;
     overflow: hidden !important;
   }
 
-  .prefered-contact-methods{
-    & > div {
-      margin-top: .5em;
+  .images-container {
+    .image-block > img:nth-of-type(2) {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      width: 15px;
+      height: 15px;
+      z-index: 100;
+      background-color: white;
+      border-radius: 50%;
+    }
+
+    .text-thumb {
       display: flex;
-      justify-content: left;
+      flex-direction: column;
+      justify-content: center;
       align-items: center;
-      flex-wrap: wrap;
 
-      img {
-        height: 25px;
-        width: 25px;
-        cursor: pointer;
-        margin: 0 .75em;
+      span:nth-of-type(1) {
+        text-align: center;
+        font-size: 12px;
+        font-weight: bold;
+        margin-bottom: .5em;
       }
 
-      img:first-child{
-        margin-left: 0 !important;
+      span:nth-of-type(2) {
+        font-size: 10px;
       }
+    }
 
-      img:last-child{
-        margin-right: 0 !important;
-      }
+    button {
+      width: 45px;
+      height: 45px;
+      font-size: 60px;
+      line-height: 0;
+      font-family: Raleway-Thin;
+    }
+  }
+}
+
+.prefered-contact-methods {
+  & > div {
+    margin-top: .5em;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    flex-wrap: wrap;
+
+    img {
+      height: 25px;
+      width: 25px;
+      cursor: pointer;
+      margin: 0 .75em;
+    }
+
+    img:first-child {
+      margin-left: 0 !important;
+    }
+
+    img:last-child {
+      margin-right: 0 !important;
     }
   }
 
@@ -102,6 +141,7 @@ $main-theme-color: #2E7990;
       grid-column: unset;
     }
   }
+
 }
 
 mat-checkbox {
