--- a/src/app/pages/offers-page/offers-page.component.html
+++ b/src/app/pages/offers-page/offers-page.component.html
@@ -87,7 +87,8 @@
   </div>
 
   <div *ngIf="!emptyFilterResult" class="offers-list">
-    <app-offer-card *ngFor="let offer of (filteredOffers$ ? filteredOffers$ : sortedOffers$) | async" [offer]="offer"></app-offer-card>
+    <app-offer-card *ngFor="let offer of (filteredOffers$ ? filteredOffers$ : sortedOffers$) | async" [offer]="offer"
+                    [editable]="false"></app-offer-card>
   </div>
 
   <div *ngIf="emptyFilterResult" class="empty-filter-result">
