some bugs fixed

--- a/src/app/dialogs/sign-up/sign-up.component.html
+++ b/src/app/dialogs/sign-up/sign-up.component.html
@@ -24,7 +24,7 @@
   </mat-form-field>
 
   <mat-checkbox (change)="acceptRules = !acceptRules" [checked]="acceptRules">
-    &nbsp;Ознакомлен и согласен с <a target="_blank" rel="noopener noreferrer" href="/rules">правилами размещения объявлений</a>
+    Ознакомлен и согласен с <a target="_blank" rel="noopener noreferrer" href="/rules">правилами размещения объявлений</a>
   </mat-checkbox>
 </div>
 
