--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -58,6 +58,7 @@
       min-width: unset;
       max-width: 400px;
       text-align: center;
+      z-index: 0;
 
       h1 {
         font-size: 48px;
