--- a/src/app/pages/offer-form/offer-form.component.html
+++ b/src/app/pages/offer-form/offer-form.component.html
@@ -101,7 +101,7 @@
       </div>
 
       <mat-checkbox class="full-width-field" (change)="attacheEmail = !attacheEmail" [checked]="attacheEmail">
-        &nbsp;Указать Ваш E-mail в качестве контактной информации
+        Указать Ваш E-mail в качестве контактной информации
       </mat-checkbox>
 
       <div class="bottom-block">
