--- a/src/app/pages/offer-form/offer-form.component.scss
+++ b/src/app/pages/offer-form/offer-form.component.scss
@@ -108,6 +108,14 @@ $main-theme-color: #2E7990;
       font-family: Raleway-Thin;
     }
   }
+
+  @media screen and (max-width: 770px) {
+    grid-template: auto/1fr;
+
+    .full-width-field {
+      grid-column: unset;
+    }
+  }
 }
 
 .prefered-contact-methods {
@@ -146,6 +154,10 @@ $main-theme-color: #2E7990;
 
 mat-checkbox {
   margin-bottom: 1em;
+
+  .mat-checkbox-label{
+    white-space: normal;
+  }
 }
 
 .bottom-block {
