--- a/src/app/template-blocks/header/header.component.html
+++ b/src/app/template-blocks/header/header.component.html
@@ -13,11 +13,11 @@
       <button *ngIf="!loggedIn" class="button-primary login-button" (click)="openLoginDialog()">Вход
         <img src="/assets/img/login_thumb.svg" alt="Войти" />
       </button>
-      <div *ngIf="loggedIn">
+      <div *ngIf="loggedIn" (blur)="visibleMenu = false">
         <button class="button-primary button-circle" (click)="visibleMenu = !visibleMenu">{{authControlText}}</button>
         <ul class="header-menu" (mouseleave)="visibleMenu = false" [style.display]="visibleMenu ? 'flex' : 'none'">
           <li (click)="openProfile()">Личный кабинет</li>
-          <li [routerLink]="['/feedback']">Помощь</li>
+          <li (click)="openFeedback()">Помощь</li>
           <li (click)="logOut()">Выход</li>
         </ul>
       </div>
