overlay component added

--- a/src/app/template-blocks/image-cropper/custom-image-cropper.component.html
+++ b/src/app/template-blocks/image-cropper/custom-image-cropper.component.html
@@ -15,8 +15,8 @@
 
 
 <div *ngIf="isLoaded" mat-dialog-actions class="control-panel">
-  <button mat-stroked-button color="primary" (click)="_fileInput.click()">Изменить</button>
-  <button mat-raised-button color="primary" (click)="cropImage()">Обрезать</button>
+  <button class="button-primary button-white" (click)="_fileInput.click()">Изменить</button>
+  <button class="button-primary" (click)="cropImage()">Обрезать</button>
 </div>
 
 
