--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-overlay></app-overlay>
 <app-notification-bar></app-notification-bar>
 <app-header></app-header>
 <router-outlet></router-outlet>
