--- a/src/app/dialogs/reset-password/reset-password.component.html
+++ b/src/app/dialogs/reset-password/reset-password.component.html
@@ -17,6 +17,6 @@
 </div>
 
 <div mat-dialog-actions class="full-width-action-buttons">
-  <button *ngIf="!emailSent"class="button-primary" (click)="sendEmailAndResetPassword()">Отправить сслыку</button>
-  <button *ngIf="emailSent" class="button-primary button-transparent" [mat-dialog-close]>Понятно</button>
+  <button *ngIf="!emailSent" class="button-primary" (click)="sendEmailAndResetPassword()">Отправить сслыку</button>
+  <button *ngIf="emailSent" class="button-primary" [mat-dialog-close]>Понятно</button>
 </div>
