--- a/src/app/dialogs/email-verify-message/email-verify.component.scss
+++ b/src/app/dialogs/email-verify-message/email-verify.component.scss
@@ -1,3 +1,13 @@
 p > strong {
   white-space: nowrap;
 }
+
+span {
+  font-size: 10px;
+  text-align: center;
+  color: #6b6b6b;
+}
+
+.full-width-action-buttons{
+  margin-top: 1em;
+}
