--- a/src/app/pages/profile-page/profile-page.component.scss
+++ b/src/app/pages/profile-page/profile-page.component.scss
@@ -97,6 +97,27 @@ h2 {
 }
 
 #user-offers {
+
+  .title-block {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    button {
+      width: 35px;
+      height: 35px;
+      font-size: 45px;
+      line-height: 0;
+      font-family: Raleway-Thin;
+
+      @media screen and (max-width: 770px) {
+        width: 28px;
+        height: 28px;
+        font-size: 35px;
+      }
+    }
+  }
+
   @media screen and (max-width: 770px) {
     h2 {
       font-size: 20px;
