sell business type && minor bugs

--- a/src/app/dialogs/delete-offer/delete-offer.component.html
+++ b/src/app/dialogs/delete-offer/delete-offer.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Удалить объявление?</h1>
+<h1 mat-dialog-title>Удалить оффер?</h1>
 <div class="content" mat-dialog-content>
   Вы уверены, что хотите удалить это объявление без возможности восстановления?
 </div>
