--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -4,8 +4,8 @@
     <div class="text">
       <p>Деловые предложения о сотрудничестве</p>
       <h1>Поможем найти партнёра по бизнесу</h1>
-      <p>Разместите информацию о своем бизнесе на BezMate сегодня — и уже завтра вы сможете найти надежного партнера по бизнесу в любом регионе.</p>
-      <button class="button-primary button-primary-large" [routerLink]="['/new-offer']">Разместить предложение</button>
+      <p>Разместите Ваше бизнес-предложение на BizMate сегодня — и уже завтра Вы сможете найти надежного партнера по бизнесу в любом регионе.</p>
+      <button class="button-primary button-primary-large" [routerLink]="['/new-offer']">Разместить оффер</button>
     </div>
 
     <div class="image-block"></div>
@@ -26,7 +26,7 @@
   <section class="about-platform-block">
     <h2>О платформе</h2>
     <p>Есть огромное множество людей с разными идеями и неординарным видением их осуществления. Но порой реализовать новую идею в одиночку не по силам даже самым отчаянным энтузиастам. Причиной этого могут быть самые различные факторы, одним из которых является отсутствие определенных ресурсов. Начинаете ли Вы свой проект с нуля или уже являетесь владельцем работающего бизнеса, для развития, масштабирования и расширения рынка Вам понадобятся финансовые, интеллектуальные или социальные ресурсы, которые могут оказаться недоступны в нужный момент. Для того, чтобы быстро и эффективно претворять идею в жизнь, всегда необходима чья-то помощь. Взаимопомощь и поиск общей выгоды - эти два явления всегда были и остаются одними из главных двигателей успеха во всех сферах деятельности.</p>
-    <p>В связи с этим команда проекта "BizMate" поставила перед собой крайне значимую и амбициозную задачу - создание онлайн платформы, где начинающие предприниматели и опытные деятели бизнеса могут искать, предлагать и обменивать разного рода ценностями и услугами для получения взаимной выгоды и дополнительного импульса к развитию своего дела. Мы продолжаем развивать наш сервис с той целью, чтобы сделать этот процесс максимально эффективным и удобным для всех его участников. Станьте частью платформы "BizMate" и начните использовать эффект взаимопомощи для собственного развития уже сейчас!</p>
+    <p>В связи с этим команда проекта BizMate поставила перед собой крайне значимую и амбициозную задачу - создание онлайн платформы, где начинающие предприниматели и опытные деятели бизнеса могут искать, предлагать и обменивать разного рода ценностями и услугами для получения взаимной выгоды и дополнительного импульса к развитию своего дела. Мы продолжаем развивать наш сервис с той целью, чтобы сделать этот процесс максимально эффективным и удобным для всех его участников. Станьте частью платформы "BizMate" и начните использовать эффект взаимопомощи для собственного развития уже сейчас!</p>
     <img src="/assets/img/hands.svg" alt="Партнерство BizMate"/>
   </section>
 
