--- a/src/app/pages/offer-form/offer-form.component.html
+++ b/src/app/pages/offer-form/offer-form.component.html
@@ -36,7 +36,7 @@
       <h4 class="full-width-field">Детали оффера</h4>
 
       <mat-form-field>
-        <mat-label>Заголовок оффера *</mat-label>
+        <mat-label>Заголовок *</mat-label>
         <input matInput formControlName="title">
       </mat-form-field>
 
