--- a/src/app/template-blocks/footer/footer.component.html
+++ b/src/app/template-blocks/footer/footer.component.html
@@ -18,7 +18,7 @@
 
     <div class="email_and_offer_button">
       <p>info@bizmate.ru</p>
-      <button class="button-primary button-transparent" [routerLink]="['/new-offer']">Разместить объявление</button>
+      <button class="button-primary button-transparent" [routerLink]="['/new-offer']">Разместить оффер</button>
     </div>
   </div>
 
