--- a/src/app/pages/offer-form/offer-form.component.scss
+++ b/src/app/pages/offer-form/offer-form.component.scss
@@ -152,12 +152,9 @@ $main-theme-color: #2E7990;
 
 }
 
-mat-checkbox {
-  margin-bottom: 1em;
-
-  .mat-checkbox-label{
-    white-space: normal;
-  }
+.email-info {
+  font-size: 12px;
+  font-family: Raleway-SemiBold;
 }
 
 .bottom-block {
