meta tags service resolved

--- a/src/app/template-blocks/header/header.component.html
+++ b/src/app/template-blocks/header/header.component.html
@@ -6,7 +6,7 @@
 
     <div class="nav-buttons">
       <a [routerLink]="['/']">Главная</a>
-      <a [routerLink]="['/offers-page']">Оффреы</a>
+      <a [routerLink]="['/offers-page']">Офферы</a>
     </div>
 
     <div class="login-button">
