--- a/src/app/template-blocks/image-cropper/custom-image-cropper.component.html
+++ b/src/app/template-blocks/image-cropper/custom-image-cropper.component.html
@@ -9,7 +9,7 @@
 </div>
 
 <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true" [aspectRatio]="1" [cropperMinWidth]="40"
-               [resizeToWidth]="40" [roundCropper]="true" [autoCrop]="false" (imageCropped)="imageCropped($event)" [format]="'png'"
+               [roundCropper]="true" [autoCrop]="false" (imageCropped)="imageCropped($event)" [format]="'png'"
                (imageLoaded)="imageLoaded()" (loadImageFailed)="loadImageFailed()">
 </image-cropper>
 
