footer style for mobile edited

--- a/src/app/template-blocks/footer/footer.component.scss
+++ b/src/app/template-blocks/footer/footer.component.scss
@@ -111,7 +111,7 @@ footer {
       .email_and_offer_button {
         order: 1;
         align-items: flex-start;
-        margin: 1.5em 0 2.5em;
+        margin: 1.5em 1.5em 2.5em 0;
       }
 
       .footer_logo_and_copyright {
