--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -5,7 +5,7 @@
       <p>Деловые предложения о сотрудничестве</p>
       <h1>Поможем найти партнёра по бизнесу</h1>
       <p>Разместите Ваше бизнес-предложение на BizMate сегодня — и уже завтра Вы сможете найти надежного партнера по бизнесу в любом регионе.</p>
-      <button class="button-primary button-primary-large" [routerLink]="['/new-offer']">Разместить оффер</button>
+      <button class="button-primary button-primary-large" [routerLink]="['/new-offer']">Создать оффер</button>
     </div>
 
     <div class="image-block"></div>
