--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -59,7 +59,7 @@
     <ng-container *ngIf="!hasOffers">
       <div class="no-offers-block">
         <p>Размещенных офферов нет</p>
-        <button class="button-primary button-primary-large" [routerLink]="'/new-offer'">Разместить оффер</button>
+        <button class="button-primary button-primary-large" [routerLink]="'/new-offer'">Создать оффер</button>
       </div>
     </ng-container>
   </section>
