--- a/src/app/dialogs/login/login.component.scss
+++ b/src/app/dialogs/login/login.component.scss
@@ -1,10 +1,3 @@
-.link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  & > img {
-    width: 18px;
-    height: 18px;
-  }
+.google-login {
+  margin-top: 1em;
 }
