--- a/src/styles.scss
+++ b/src/styles.scss
@@ -157,6 +157,19 @@ textarea.mat-input-element{
   border-bottom: .75px solid #2E7990;
 }
 
+.non-border-link-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1em;
+  cursor: pointer;
+
+  & > img {
+    width: 18px;
+    height: 18px;
+  }
+}
+
 .button-primary-large {
   padding: 20px 25px;
 }
