offer card desc length limit & latest offers 4 limit

--- a/src/app/template-blocks/offer-card/offer-card.component.html
+++ b/src/app/template-blocks/offer-card/offer-card.component.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="offer-card-desc">
-      <p>{{offer.desc}}</p>
+      <p>{{getOfferDescription()}}</p>
     </div>
   </div>
   <div class="offer-card-footer">
