--- a/src/app/template-blocks/footer/footer.component.html
+++ b/src/app/template-blocks/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
 
   <div class="scroll-up-arrow">
-    <a (click)="scrollToHeader()"><img src="/assets/img/thin_arrow.svg" alt="Вверх"/></a>
+    <a (click)="scrollToHeader()"><img src="/assets/img/bold_arrow.svg" alt="Вверх"/></a>
   </div>
 
   <div class="footer-container">
