--- a/src/app/dialogs/login/login.component.html
+++ b/src/app/dialogs/login/login.component.html
@@ -14,7 +14,7 @@
 
   <mat-form-field appearance="legacy">
     <mat-label>Пароль</mat-label>
-    <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password">
+    <input matInput [type]="hidePassword ? 'password' : 'text'" formControlName="password" (keypress)="onKeyPress($event)">
     <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Скрыть пароль'"
             [attr.aria-pressed]="hidePassword">
       <img src="/assets/img/visibility_eye.svg" [style.opacity]="hidePassword ? .3 : 1" />
