--- a/src/app/dialogs/notification/notification.component.html
+++ b/src/app/dialogs/notification/notification.component.html
@@ -1,7 +1,11 @@
 <h1 mat-dialog-title>{{data.title}}</h1>
 <div mat-dialog-content>
-  {{data.text}}
+  {{data.mainText}}
 </div>
 <div mat-dialog-actions class="full-width-action-buttons">
-  <button class="button-primary" [mat-dialog-close]>Понятно</button>
+  <ng-container *ngIf="data.extraButton && data.extraButton.length">
+    <button *ngFor="let button of data.extraButton" [routerLink]="button.route" class="{{button.buttonClass}}"
+            [mat-dialog-close]>{{button.buttonText}}</button>
+  </ng-container>
+  <button class="button-primary button-white" [mat-dialog-close]>{{data.actionText || 'Закрыть'}}</button>
 </div>
