--- a/src/app/pages/offers-page/offers-page.component.html
+++ b/src/app/pages/offers-page/offers-page.component.html
@@ -3,8 +3,10 @@
   <div class="highlight-box search-form-panel">
     <div>
       <h3>Поиск офферов</h3>
-      <img src="/assets/img/bold_arrow.svg" alt="Скрыть/Показать меню"
-           (click)="isSearchFormVisible = !isSearchFormVisible" [ngClass]="isSearchFormVisible ? 'transform-arrow': null"/>
+      <button class="button-primary button-circle" (click)="isSearchFormVisible = !isSearchFormVisible">
+        <img src="/assets/img/bold_arrow.svg" alt="Скрыть/Показать меню"
+             [class.transform-arrow]="isSearchFormVisible"/>
+      </button>
     </div>
     <!-- Desktop form -->
     <form class="desktop-form" [formGroup]="searchForm">
