--- a/src/app/template-blocks/footer/footer.component.scss
+++ b/src/app/template-blocks/footer/footer.component.scss
@@ -11,6 +11,7 @@ footer {
     img {
       width: 32px;
       height: 19px;
+      transform: rotateX(180deg);
       cursor: pointer;
     }
   }
